--- a/package.json
+++ b/package.json
@@ -40,5 +40,6 @@
     "vite": "^7.0.4",
     "vite-plugin-pwa": "^1.0.2",
     "vite-plugin-svgr": "^4.3.0"
-  }
+  },
+  "packageManager": "pnpm@10.12.1"
 }
