--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.11.0",
     "motion": "^12.23.12",
     "react": "^19.1.0",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.7.1",
